--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,25 @@
 annotated-types==0.7.0
 click==8.3.0
+coverage==7.11.3
+exceptiongroup==1.3.0
+iniconfig==2.3.0
 joblib==1.5.2
 numpy==2.2.6
+packaging==25.0
+-e git+https://github.com/suarezsp/petra.git@c55994bd37193458ac1bc60d531d97d29e3617d6#egg=petra
+pluggy==1.6.0
 psutil==7.1.3
 pydantic==2.12.4
 pydantic_core==2.41.5
+Pygments==2.19.2
+pytest==9.0.0
+pytest-cov==7.0.0
 PyYAML==6.0.3
 scikit-learn==1.7.2
 scipy==1.15.3
 tabulate==0.9.0
 threadpoolctl==3.6.0
+tomli==2.3.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 watchdog==6.0.0
